// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadField renders context image when image prop is provided 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="UploadField/UploadField.tsx:72"
  data-style-src="react-strict-dom:web/runtime.js"
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="UploadField/UploadField.tsx:74"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <div
      className="margin-x1ghz6dp padding-x1717udv"
      data-element-src="UploadField/UploadField.tsx:76"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <img
        alt="Logo"
        className="aspectRatio-xuw900x height-xt7dq6l maxWidth-x193iq5w"
        data-element-src="UploadField/UploadField.tsx:77"
        data-style-src="react-strict-dom:web/runtime.js"
        src="https://example.com/logo.png"
        style={{}}
      />
      <span
        className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
        data-element-src="UploadField/UploadField.tsx:78"
        data-style-src="react-strict-dom:web/runtime.js"
        style={{}}
      >
        <svg
          data-testid="icon-upload"
        />
      </span>
    </div>
    <div
      className="margin-x1ghz6dp padding-x1717udv"
      data-element-src="UploadField/UploadField.tsx:96"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <p
        className="margin-x1ghz6dp padding-x1717udv"
        data-element-src="Text/Text.tsx:36"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        <a
          className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
          data-element-src="Link/Link.tsx:27"
          data-style-src="react-strict-dom:web/runtime.js"
          href="#"
          onClick={[Function]}
          ref={null}
          style={{}}
        />
         
      </p>
    </div>
  </div>
</div>
`;

exports[`UploadField renders the upload area by default 1`] = `
<div
  className="margin-x1ghz6dp padding-x1717udv"
  data-element-src="UploadField/UploadField.tsx:72"
  data-style-src="react-strict-dom:web/runtime.js"
  data-testid="upload-field"
  style={{}}
>
  <div
    className="margin-x1ghz6dp padding-x1717udv"
    data-element-src="UploadField/UploadField.tsx:74"
    data-style-src="react-strict-dom:web/runtime.js"
    style={{}}
  >
    <span
      className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
      data-element-src="UploadField/UploadField.tsx:87"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <svg
        data-testid="icon-upload"
      />
    </span>
    <div
      className="margin-x1ghz6dp padding-x1717udv"
      data-element-src="UploadField/UploadField.tsx:96"
      data-style-src="react-strict-dom:web/runtime.js"
      style={{}}
    >
      <p
        className="margin-x1ghz6dp padding-x1717udv"
        data-element-src="Text/Text.tsx:36"
        data-style-src="react-strict-dom:web/runtime.js"
        ref={null}
        style={{}}
      >
        <a
          className="margin-x1ghz6dp padding-x1717udv textDecoration-x1hl2dhg textAlign-x16tdsg8 wordWrap-x1vvkbs"
          data-element-src="Link/Link.tsx:27"
          data-style-src="react-strict-dom:web/runtime.js"
          href="#"
          onClick={[Function]}
          ref={null}
          style={{}}
        />
         
      </p>
    </div>
  </div>
</div>
`;
